--- a/npcs/madam_stella.yaml
+++ b/npcs/madam_stella.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -333,6 +333,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: a_thieve_s_assassin_s_guild
       name: A Thieve's/Assassin's Guild
 
@@ -465,23 +466,43 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Constitution
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Poison
     skills:
-    - Dwarf Abilities:
-      - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
-        Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-        Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                      instead of his normal Proficiency Bonus
-
-    special-abilities:
-       - Proficiencies: Perception, Persuasion, Intimidation
-         Feats: N/A        
+    - Bookkeeping
+    proficiencies:
+    - Perception
+    - Stealth
+    - Sleight-of-Hand
+    - Deception    
+    - Intimidation
+    - Persuasion
+  special-abilities:
+  - title: Dwarf Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.
+    - title: Dwarven Resistance
+    - content: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+    - title: Tool Proficiency
+    - content: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
+    - title: Dwarven Combat Training
+    - content: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+    - title: Stonecunning
+    - content: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+               instead of his normal Proficiency Bonus       
        
-    attacks: |
-      1 attack with Dagger
-    combat-tactics: |
-      She'll only fight long enough for her security arrive
-    special-equipment:
-    - Dagger
+  - title: Attacks
+  - content: 1 attack with Dagger
+  - title: Combat Tactics
+  - content: She'll only fight long enough for her security arrive
 
   profile:
 
