--- a/npcs/Races Classes and Subclasses/warlock_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/warlock_subclasses.yaml
@@ -199,7 +199,7 @@
     - title: Awakened Mind
     - content: Your alien knowledge gives you the ability to touch the minds of other creatures. You can telepathically speak to any creature you can see within 30 feet of you. You don't need to share a language with
                the creature for it to understand your telepathic utterances, but the creature must be able to understand at least one language
-    - title: Entropis Ward
+    - title: Entropic Ward
     - content: You learn to magically ward yourself against attack and to turn an enemy's failed strike into good luck for yourself. When a creature makes an attack roll against you, you can use your reaction to
                impose disadvantage on that roll. If the attack misses you, your next attack roll against the creature has advantage if you make it before the end of your next turn. Once you use this feature, you can't
                use it again until you finish a short or long rest 
